# qbox

./: .gitignore  Cargo.toml  LICENSE  README.md  symbols.txt
qbox-broker/: Cargo.toml
qbox-broker/src/: lib.rs
qbox-broker/src/binance/: mod.rs
qbox-broker/src/ctp/: mod.rs  quote.rs  trade.rs
qbox-broker/src/femas/: mod.rs
qbox-broker/src/huobi/: api.rs  mod.rs
qbox-broker/src/okex/: mod.rs
qbox-broker/src/xtp/: mod.rs
qbox-cli/: Cargo.toml
qbox-cli/examples/: url.rs
qbox-cli/src/: app.rs  main.rs  opt.rs
qbox-core/: Cargo.toml  build.rs
qbox-core/proto/: qbox.proto
qbox-core/src/: bus.rs  filter.rs  lib.rs  setting.rs
qbox-core/src/broker/: mod.rs  quoter.rs  trader.rs  types.rs
qbox-core/src/bus/: local.rs  mod.rs  shm.rs  topics.rs
qbox-core/src/comm/: grpc.rs  mod.rs
qbox-core/src/core/: db.rs  events.rs  mod.rs  orders.rs  positions.rs  qbox.rs  quotes.rs  topics.rs
qbox-core/src/counter/: mod.rs  quoter.rs  trader.rs  types.rs
qbox-core/src/db/: assets.rs  lmdb.rs  memory.rs  mod.rs  orders.rs  positions.rs  quotes.rs  rocksdb.rs  schema.sql  sqlite.rs
qbox-core/src/filter/: limit.rs
qbox-core/src/filters/: filter.rs  limit.rs  mod.rs
qbox-core/src/indicators/: ema.rs  macd.rs  max.rs  min.rs  mod.rs  normalize.rs  scale.rs  sma.rs
qbox-core/src/strategy/: executor.rs  mod.rs
qbox-counter/: Cargo.toml
qbox-counter/doc/: desgin.eddx
qbox-counter/src/: lib.rs
qbox-counter/src/binance/: api.rs
qbox-counter/src/ctp/: mod.rs  quote.rs  trade.rs
qbox-counter/src/femas/: mod.rs
qbox-counter/src/okex/: api.rs
qbox-counter/src/xtp/: mod.rs
qbox-gui/: Cargo.toml
qbox-gui/examples/: bljj.rs
qbox-gui/src/: app.rs  assets.rs  bus.rs  counter.rs  lib.rs  quotes.rs  strategy.rs  trade.rs
qbox-gui/src/app/: command.rs  state.rs  view.rs  widget.rs
qbox-gui/src/app/view/: chart_header.rs  indicator.rs  instrument.rs  kline.rs  main_menu.rs  manual_trade.rs  sys_menu.rs
qbox-gui/src/app/widget/: button.rs  menu.rs  radio.rs
qbox-strategy/: Cargo.toml
qbox-strategy/src/classic/: mod.rs
