[package]
edition = "2018"
name = "qbox-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
anyhow = "1.0.44"
chrono = "0.4.19"
core_affinity = "0.5.10"
crossbeam = "0.8.1"
csv = "1.1.6"
dashmap = "4.0.2"
dyn-clone = "1.0.4"
flate2 = "1.0.22"
kvdb = "0.10.0"
kvdb-memorydb = "0.10.0"
lazy_static = "1.4.0"
libc = "0.2.99"
log = "0.4"
matrixmultiply = "0.3.1"
memmap2 = "0.5.0"
ndarray = "0.15.3"
neuronika = "0.1.0"
nix = "0.23.0"
parking_lot = "0.11.2"
rand = "0.8.4"
rayon = "1.5.1"
reqwest = {version = "0.11", features = ["blocking", "json"]}
ron = "0.7.0"
rusqlite = {version = "0.26", default-features = false, features = ["bundled", "bundled-full", "bundled-windows"]}
rust_decimal = "1.16"
rust_decimal_macros = "1.16"
serde = {version = "1.0.113", features = ["derive"]}
serde_json = "1.0"
structopt = "0.3.4"
ta = "0.4.0"
thiserror = "1.0.30"
tungstenite = "0.15.0"
url = "2.2.2"
